[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Textures/palette_button_outline.png" type="Texture" id=1]
[ext_resource path="res://Assets/Textures/palette_button.png" type="Texture" id=2]
[ext_resource path="res://UI/Components/PaletteButton.gd" type="Script" id=3]
[ext_resource path="res://Assets/Fonts/font_big_bold.tres" type="DynamicFont" id=4]

[node name="PaletteButton" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1889.0
margin_bottom = -1049.0
rect_min_size = Vector2( 31, 31 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Color" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selection" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Z"
align = 1
valign = 1

[connection signal="gui_input" from="." to="." method="_on_PaletteButton_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_PaletteButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PaletteButton_mouse_exited"]
